--- a/package.json
+++ b/package.json
@@ -4,12 +4,42 @@
   "description": "Daily Todo List",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --mode development --watch",
+    "start-pro": "webpack --mode production",
+    "server": "nodemon server/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Raylin009/daily_todo.git"
   },
   "keywords": [
     "Todo",
     "crudy"
   ],
-  "author": "",
-  "license": "ISC"
+  "author": "Ray Lin",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Raylin009/daily_todo/issues"
+  },
+  "homepage": "https://github.com/Raylin009/daily_todo#readme",
+  "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "express": "^4.17.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  }
 }
