--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "knex": "^0.19.1",
+    "pg": "^7.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
