--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "knex": "^0.19.1",
+    "moment": "^2.24.0",
     "pg": "^7.12.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
