--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment": "^2.24.0",
     "pg": "^7.12.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "typeface-roboto": "0.0.75"
   }
 }
