--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
     "@material-ui/core": "^4.3.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
